feat: exe bundler